# trine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  model.trine  oicos.h  trine.c  trine_bench.c  trine_canon.c  trine_csidf.c  trine_csidf.h  trine_dedup.c  trine_embed.c  trine_encode.c  trine_encode.h  trine_field.c  trine_format.c  trine_format.h  trine_pack.c  trine_stage1.c  trine_stage1.h  trine_test_sim.c
bench/harness/: bench_projection.c  bench_s2_diag.c  bench_semantic.c  bench_throughput.c  gen_synthetic.c
bench/legacy/: BENCHMARK_REPORT.md  trine_corpus_bench.c
bench/reports/: stage1_baseline.json  stage2_evaluation.md
benchmarks/: trine_corpus_bench.c
bindings/python/: MANIFEST.in  Makefile  pyproject.toml  setup.py
bindings/python/pytrine/: __init__.py  _binding.py  build_lib.py  langchain.py  llamaindex.py  stage2.py  trine.py
bindings/python/tests/: test_block_diagonal.py  test_langchain.py  test_pytrine.py  test_pytrine_s2.py
bindings/rust/: build.rs
data/download/: fetch_all.sh  fetch_mrpc.sh  fetch_qqp.sh  fetch_sick.sh  fetch_sts.sh  (+3 more)
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  TALENT.md  VISION.md
examples/: basic_embed.c  block_diagonal_search.c  dedup_pipeline.c  routed_search.c  semantic_search.c  train_block_diagonal.c  train_custom.c
model/: README.md
python/: MANIFEST.in  Makefile  setup.py
rust/: Cargo.toml  build.rs
scripts/: evaluate.sh  prepare_data.sh  release.sh  train.sh
trinedb/: Makefile  test_trinedb.sh  trinedb.c
(+95 files in other folders)
