[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pytrine"
version = "1.0.1"
description = "Python bindings for the TRINE ternary embedding library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "OCTIV Project"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["embedding", "ternary", "deduplication", "similarity", "nlp"]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
langchain = ["langchain>=0.1.0"]
llamaindex = ["llama-index>=0.10.0"]
dev = ["pytest>=7.0", "numpy>=1.20"]

[tool.setuptools.packages.find]
include = ["pytrine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
